# Academy_Effective

./: README.md  manage.py  mypy.ini  pyproject.toml  ruff.toml
catalog/: admin.py  forms.py  models.py  urls.py  views.py
catalog/migrations/: 0001_initial.py  0002_language_book_language.py  0003_bookinstance_borrower_alter_book_isbn.py  0004_alter_bookinstance_options.py  0005_alter_author_options_alter_author_date_of_death.py  0006_alter_bookinstance_options.py  0007_alter_author_options.py
catalog/templates/: base_generic.html
catalog/templates/catalog/: author_detail.html  author_list.html
catalog/tests/: test_forms.py  test_models.py  test_views.py
locallibrary/: settings.py  urls.py
locallibrary/catalog/: admin.py  models.py  urls.py  views.py
locallibrary/catalog/migrations/: 0001_initial.py  0002_language_book_language.py  0003_bookinstance_borrower_alter_book_isbn.py  0004_alter_bookinstance_options.py
locallibrary/catalog/templates/: base_generic.html  index.html
locallibrary/catalog/templates/catalog/: author_detail.html
locallibrary/catalog/tests/: test_views.py
locallibrary/locallibrary/: settings.py  urls.py
