[tool.poetry]
name = "src"
version = "1.0.0"
description = "LocalLibrary"
authors = ["Dmitry505 <dimkad1810@mal.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.3"
python-dotenv = "^1.0.1"
django-isbn-field = "^0.5.3"
gunicorn = "^23.0.0"
dj-database-url = "^2.3.0"
psycopg2-binary = "^2.9.10"
whitenoise = "^6.8.2"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
mypy = "^1.13.0"
django-stubs = "^5.1.1"
ruff = "^0.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
